--- a/src/markdown/mas/exploratie_verklarende_variabelen.Rmd
+++ b/src/markdown/mas/exploratie_verklarende_variabelen.Rmd
@@ -268,7 +268,7 @@ vrtlt_vars <- sort(names(mas_data_df)[grep("vrtlt$", names(mas_data_df))])
 plotjaar_vars <- c("area_prop_sb", "area_prop_bo_overig", hfdtlt_vars, 
                    "gewas_div_shannon", "gewas_div_n", "gewas_evenness",
                    vrtlt_vars, "perceel_median_area", "perceel_iqr_area", 
-                   "perceel_cv_area", "inertie_sb", "inertie_rest", 
+                   "perceel_cv_area", "inertie_sb", "inertie_overig", 
                    "status_teller", "sbp")
 
 plotjaar_df <- mas_data_df %>%
